--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ p{
 
 .titulo_banner{
 	font-family: 'Days One', sans-serif;
-	color: brown;
+	color: #ADB967;
 	margin-left: 10px;
 	font-size: 50px;
 	text-align: center;
@@ -145,7 +145,7 @@ p{
 
 .subtitulo_banner{
 	font-family: 'Oswald', sans-serif;
-	color: brown;
+	color: #ADB967;
 	font-size: 20px;
 	text-align: center;
 }
@@ -213,7 +213,7 @@ ul li ul{
 	float:left;
 	list-style-type: none;
 	padding: 10px;
-	background: rgba(30, 50, 180, 0.5); 
+	background: rgba(170, 185, 100, 0.5); 
 	margin: 2px 3px 0px 0px;
 	border-radius: 5px 5px 5px 5px;
 	box-shadow: 0 0 6px white inset;
@@ -221,5 +221,5 @@ ul li ul{
 	display: none;
 	position: absolute;
 	font-size: 12px;
-	font-family: 'Days One', sans-serif;
+	font-family: 'Josefin Slab', serif;
 }
